[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "1.0.0"
description = "Simulated customer support environment using OpenEnv with FastAPI"
authors = [
    { name="Hemanth Kumar", email="sirasapalli1238@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0"
]

[tool.huggingface]
# Optional: specify Space type (api / app)
space-type = "api"
