[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "1.0.0"
description = "An OpenEnv-compatible AI environment simulating a customer support ticket system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "Tarun3004" }
]

keywords = ["openenv", "reinforcement-learning", "customer-support", "ai-agent"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openai>=1.30.0",
    "openenv-core>=0.2.0"
]
[project.scripts]
start = "server.app:main"
[project.urls]
Homepage = "https://huggingface.co/spaces/Tarun3004/openenv-customer-support"
Repository = "https://huggingface.co/spaces/Tarun3004/openenv-customer-support"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]

[tool.openenv]
name = "openenv-customer-support"
version = "1.0.0"
entry_point = "server.app:app"
tasks = ["easy_classification", "refund_handling", "escalation_decision"]
